<resources>
    <string name="app_name">PicturesOfTheDay</string>
    <string name="photo_of_the_day_stub">Фото дня</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">Like</string>
    <string name="settings">Settings</string>
    <string name="search">Поиск</string>
    <string name="default_string">Default</string>
    <string name="entry_string">Entry</string>
    <string name="choice_string">Choice</string>
    <string name="action_string">Action</string>
    <string name="filter_string">Filter</string>
    <string name="background_color_string">Background Color</string>
    <string name="ripple_color_string">Ripple Color</string>
    <string name="chip_icon_string">Chip icon</string>
    <string name="color_red_string">Color Red</string>
    <string name="color_black_string">Color Black</string>
    <string name="color_grey_string">Color Grey</string>
    <string name="color_green_string">Color Green</string>
    <string name="color_yelow_string">Color Yelow</string>
    <string name="color_blue_string">Color Blue</string>
    <string name="theme_1">Тема 1</string>
    <string name="theme_2">Тема 2</string>
    <string name="theme_3">Тема 3</string>
    <string name="btn">Btn</string>
    <string name="btn_text_theme_3">Theme 3</string>
    <string name="btn_text_theme_2">Theme 2</string>
    <string name="btn_text_theme_1">Theme 1</string>
    <string name="btn_text_tab_3">Tab 3</string>
    <string name="btn_text_tab_2">Tab 2</string>
    <string name="btn_text_tab_1">Tab 1</string>
    <string name="earth">Earth</string>
    <string name="solar">Solar</string>
    <string name="mars">Mars</string>
    <string name="btn_today">Today</string>
    <string name="hd_url">HD</string>
    <string name="choice_date">Choice Date</string>
    <string name="prev_img">Previus picture</string>
    <string name="solar_flares">Solar flares</string>
    <string name="picture_of_the_day_from_mars">Picture of the day from Mars</string>
    <string name="picture_of_the_day_from_earth">Picture of the day</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_pictures">Favorute pictures</string>
    <string name="date">Date</string>
</resources>