<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/app_bar_earth"
        android:icon="@drawable/ic_earth"
        android:title="@string/earth"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/app_bar_mars"
        android:icon="@drawable/ic_mars"
        android:title="@string/mars"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/app_bar_solar"
        android:icon="@drawable/ic_solar_system"
        android:title="@string/solar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/app_bar_settings"
        android:icon="@drawable/ic_settings_menu"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

</menu>