<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        style="@style/linear_layout_tabs_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/theme_1"
            style="@style/MyStyleButtonOutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_text_theme_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/theme_2"
            style="@style/MyStyleButtonOutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetLeft="10dp"
            android:text="@string/btn_text_theme_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/theme_3"
            style="@style/MyStyleButtonOutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetLeft="10dp"
            android:text="@string/btn_text_theme_3" />

    </LinearLayout>


</LinearLayout>
